# Bool-Net

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in  README.md
ccell/: ccellBOOL.cpp  ccellBOOL.h
examples/: CMakeLists.txt
examples/converge_fadd/: main.cpp
examples/converge_yeast/: main.cpp
examples/decision_fadd/: main.cpp  run.sh.in
examples/decision_gata1/: main.cpp
include/: abstract_model.h  cellBOOL.h  fonctor_bool.h  fonctor_coef.h  fonctor_generic.h  matrix_model.h  network.h  network_traits.h  predicat.h  stochastic_model.h  timed_model.h
include/bool_network/abstract_models/: fadd.h  gata1.h  yeast.h
include/bool_network/dynamic/: abstract_model.h  matrix_model.h  state_machine.h  timed_matrix_model.h
include/bool_network/models/: fadd.h  gata1.h  yeast.h
include/bool_network/simulation/: basic.h  converge.h
include/dynamic/: abstract_model.h  matrix_model.h  state_machine.h  timed_matrix_model.h
include/models/: fadd.h  gata1.h  yeast.h
include/simulation/: basic.h  converge.h
include/tests/: fadd.h  gata1.h  yeast.h
result/converge_yeast/: basic
result/decision_fadd/: tnf0_fas0.csv  tnf0_fas1.csv  tnf1_fas0.csv  tnf1_fas1.csv
result/dynamic_network/: graph  subgraph
result/model1_mutant_conv/: tnf0_fas0.csv  tnf0_fas1.csv  tnf1_fas0.csv  tnf1_fas1.csv
scripts/: decision_fadd.py  model1.py
src/bool_network/abstract_models/: fadd.cpp  gata1.cpp  yeast.cpp
src/bool_network/models/: fadd.cpp  gata1.cpp  yeast.cpp
src/models/: fadd.cpp  gata1.cpp  yeast.cpp
src/tests/: fadd.cpp  gata1.cpp  yeast.cpp
tests/: CMakeLists.txt
tests/converge_fadd/: main.cpp
tests/converge_yeast/: main.cpp
tests/decision_fadd/: main.cpp  run.sh.in
tests/decision_gata1/: main.cpp
tests/dynamic_network/: main.cpp
tests/epo_complex/: main.cpp
tests/fonctor/: main.cpp
tests/ligand_activator/: main.cpp
tests/matrix_model/: main.cpp
tests/model1_mutant_conv/: main.cpp  model.cpp  model.h
tests/model_stochastic/: main.cpp
tests/model_timed/: main.cpp
tests/timed_matrix_model/: main.cpp
tests/yeast_fixed_points/: main.cpp
